Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1016

Projecting only the column from adding a column causes the parquet scanner to return infinite values.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.3.1
    • Impala 1.4
    • None
    • None

    Description

      1. create table schema_test2 (string1 string) stored as parquet;
      2. insert into schema_test2 values ('test'); --> all queries work fine after this
      3. alter table schema_test2 add columns (string2 string);
      4. select * from schema_test2 --> works fine
      5. select string2 from schema.test2 -> prints "NULL" unstoppedly
      6. select distinct string2 from schema.test2 -> query hangs

      Attachments

        Activity

          People

            ippokratis Ippokratis Pandis
            nong_impala_60e1 Nong Li
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: